2013-01-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (html-configs-table): Use filtered variable for
	exported scan configs icon count.
	(html-config-table): Add details and edit header icons. Add meta config
	details.

2013-01-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/omp.xsl (cve-details): Added base vector for easier
	use and comparison of CVSS details.

2013-01-07  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report): For the report page case, when the
	filt_id and filter params are both missing, then add a filter param
	that matches the filter in the get_reports_response.  This ensures that
	the filter is always available as a param for things like the note
	icons, even after the "Result Filtering" Apply button.

2013-01-07  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (alert [trash]): Drop the link to the filter details
	when the filter is in the trashcan.
	(filter [trash]): Remove link to details from name.

2013-01-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (ovaldef-details): Change various labels.
	Remove version and source file from right float div.
	Replace "Basic data" with title of OVAL definition.
	Change "Deprecated" item to only be visible when value exists.
	Change "Affected" to support mulitple "affected" tags and only appear
	when tags exist.
	Add views for criteria, references and history.

2013-01-07  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (filter [trash]): Grey delete icon when filter is in
	use.
	(get_trash): Match delete_filter_response in case of error.

2013-01-07  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (new_alert_omp): Restrict filter type via filter param.

2013-01-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (column-name): Reset to first page when sorting by
	column.
